--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,13 @@ layout: default
   {% endif %}
 </div>
 
+<ul>
+        {% assign posts = site.posts | where_exp:"post", "post.url != page.url" | sample:10 %}
+        {% for post in posts %}
+          {% include rp.html %}
+        {% endfor %}
+      </ul>
+
 {% if site.related_posts.size >= 1 %}
 <div class="related">
   <h2>Related posts</h2>
