--- a/_includes/rp.html
+++ b/_includes/rp.html
@@ -1,5 +1,5 @@
 <li>
-  <a href="{{ site.baseurl }}{{ post.url }}">
+  <a href="{{ post.url | prepend: site.baseurl }}">
     <div class="post">
       <div class="post-related-title">{{ post.title }}</div>
       
