--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,7 @@ layout: default
         {% endfor %}
       </ul>
       
+{% include ad.html %}
 
 {% if site.related_posts.size >= 1 %}
 <div class="related">
