--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,8 @@ layout: default
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
+
+  <img src="https://img.uqnq.my.id/ad1.png" width="600">  
   Kunjungi artikel tentang {{ page.title }} dengan mengklik link berikut : {{ content }}
 
 <p>Bacaan lainnya:</p>
